--- a/src/global.scss
+++ b/src/global.scss
@@ -1,10 +1,18 @@
 @use './colors';
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,400;1,600&display=swap");
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: "Playfair Display";
+  color: colors.$dark-blue;
   background-color: colors.$bg-blue;
 }
