--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,22 +1,67 @@
-@use '../../colors';
+@use "../../colors";
 
-.recipe-card {
-  // max-width: 350px;
-  width: 350px;
-  height: 250px;
-  display: grid;
-  color: colors.$dark-blue;
-  background-color: colors.$light-blue;
-  border-radius: 15px;
-  padding: 15px;
-}
-
-.header-bar {
-  display: flex;
-  justify-content: space-between;
-}
+$card-width: 315px;
+$card-height: 230px;
+$card-padding: 15px;
 
 .landing-container {
   display: flex;
   justify-content: center;
+}
+
+// if box-sizing=content-box, then item-width must have padding and border-width manually added
+// or else items will not be centered properly because column will larger than item 
+@mixin responsive-centered-card-grid($item-width) {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax($item-width - 100px, $item-width)
+  );
+  grid-gap: 30px;
+  width: 100%;
+  justify-content: center;
+}
+
+.recipe-list {
+  @include responsive-centered-card-grid($card-width)
+}
+
+.recipe-card {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  padding: $card-padding;
+  // justify-self: center;  // only matters if 'max' of minmax is larger than box-size of recipe-card
+  width: $card-width;
+  height: $card-height;
+  color: colors.$dark-blue;
+  background-color: colors.$light-blue;
+  border-radius: 15px;
+}
+
+.card-header-bar {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 25px;
+  padding-right: 25px;
+  h4,
+  h3 {
+    margin: 0;
+  }
+}
+
+.card-body {
+  display: flex;
+  justify-content: center;
+  max-height: $card-height - 60px;
+  padding: 15px 20px 0 20px; // top right bottom left
+
+  // contain image within card body while preserving aspect ratio
+  img {
+    object-fit: cover;
+    // object-position: 0 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 6px;
+  }
 }
