--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -5,8 +5,8 @@ $card-height: 230px;
 $card-padding: 15px;
 
 .landing-container {
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
 }
 
 // if box-sizing=content-box, then item-width must have padding and border-width manually added
