delayed reaction text input

--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -4,10 +4,10 @@ $card-width: 315px;
 $card-height: 230px;
 $card-padding: 15px;
 
-.landing-container {
-  // display: flex;
-  // justify-content: center;
-}
+// .landing-container {
+//   // display: flex;
+//   // justify-content: center;
+// }
 
 // if box-sizing=content-box, then item-width must have padding and border-width manually added
 // or else items will not be centered properly because column will larger than item 
