--- a/src/pages/add-recipe/RecipeForm.scss
+++ b/src/pages/add-recipe/RecipeForm.scss
@@ -87,8 +87,14 @@ $input-height: 37px;
 }
 
 .form-list-row {
+  position: relative;
   display: flex;
   gap: 15px;
   align-items: center;
   margin-bottom: $row-spacing;
+   h5 {
+    position: absolute;
+    top: -23px;
+    white-space: nowrap;
+   }
 }
