--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -2,6 +2,7 @@ $dark-blue: #3b427d;
 $light-blue: #F3F4F5;
 $bg-blue: #D4E0FF;
 $icon-blue: #F5F9FF;
-$form-blue: #E3EDFC;
+$form-blue: #e9f0fb;
 $form-gray: #B1B3CB;
-$pink: #fad4d4;
+$light-pink: #fcf0f0;
+$pink: #fae4e4;
