--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -3,6 +3,7 @@ $light-blue: #F3F4F5;
 $bg-blue: #D4E0FF;
 $icon-blue: #F5F9FF;
 $form-blue: #e9f0fb;
+$accent-blue: #E3EDFC;
 $form-gray: #B1B3CB;
 $light-pink: #fcf0f0;
 $pink: #fae4e4;
