--- a/src/pages/add-recipe/RecipeForm.scss
+++ b/src/pages/add-recipe/RecipeForm.scss
@@ -32,6 +32,11 @@ $submit-border-width: 3px;
   font-size: 32px;
   text-align: center;
   margin-bottom: 10px;
+  // display: flex;
+  // justify-content: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative; // makes back button absolute positioning work?
 }
 
 #recipe-form {
@@ -218,4 +223,10 @@ input[type="checkbox"]:checked::before {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+}
+
+#back-container-new-recipe {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
